--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,17 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.9.0",
-    "bootstrap": "^5.3.6",
+    "apexcharts": "^4.7.0",
+    "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
+    "framer-motion": "^12.12.1",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0",
+    "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
