--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,25 @@ server {
         include fastcgi_params;
     }
 
+    location /sanctum/csrf-cookie {
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-Requested-With, Cache-Control' always;
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
     location /api/ {
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, X-Requested-With, Cache-Control' always;
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
         try_files $uri $uri/ /index.php?$query_string;
     }
 }
