--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,9 +9,11 @@ RUN apt-get update && apt-get install -y \
     zip \
     unzip \
     git \
-    && docker-php-ext-install pdo pdo_mysql
+    && rm -rf /var/lib/apt/lists/*
 
 # Cài đặt Composer
+RUN docker-php-ext-install pdo_mysql
+
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 # Thiết lập thư mục làm việc
