--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     zip \
     unzip \
     git \
+    default-mysql-client \
     && rm -rf /var/lib/apt/lists/*
 
 # Cài đặt Composer
